I am about to code testimonials section right now. But I figured out there is an issue in the offers page. Issue : One of the restaurant div is not aligned properly.

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -3,7 +3,10 @@
   margin: 1.4rem auto;
   line-height: 1.8rem;
   font-size: 1.2rem;
-  color: #423f3f;
+  color: rgba(35, 29, 29, 0.895);
+  font-style: oblique;
+  font-weight: 600;
+  word-spacing: 0.2rem;
 }
 
 .Services {
